# agents-cli

./: README.md  RELEASE_NOTES.md  gemini-extension.json
.claude-plugin/: plugin.json
docs/: mkdocs.yml
docs/src/guide/: development.md  evaluation.md  getting-started.md  hands-on-tutorial.md  lifecycle.md  project-structure.md  quickstart-tutorial.md
docs/src/javascripts/: lifecycle.js
docs/src/reference/: eval-dataset-migration.md  from-agent-starter-pack.md  skills.md
skills/: README.md
skills/google-agents-cli-adk-code/: SKILL.md
skills/google-agents-cli-adk-code/references/: adk-python.md
skills/google-agents-cli-deploy/: SKILL.md
skills/google-agents-cli-eval/: SKILL.md
skills/google-agents-cli-observability/: SKILL.md
skills/google-agents-cli-publish/: SKILL.md
skills/google-agents-cli-scaffold/: SKILL.md
skills/google-agents-cli-workflow/: SKILL.md
src/google/agents/cli/: __init__.py  _click.py  _experiments.py  _output.py  _project.py  _runner.py  _skills_check.py  _tools.py  _trust.py  auth.py  main.py
src/google/agents/cli/data/: _helpers.py  cmd_data_ingestion.py
src/google/agents/cli/deploy/: _operation.py  _utils.py  agent_runtime.py  cmd_deploy.py
src/google/agents/cli/dev/: cmd_install.py  cmd_lint.py  cmd_playground.py
src/google/agents/cli/eval/: _inference_runner.py  _paths.py  _synthesize_runner.py  cmd_analyze.py  cmd_compare.py  cmd_dataset.py  cmd_eval_group.py  cmd_generate.py  cmd_grade.py  cmd_metric.py  cmd_optimize.py  cmd_run.py  cmd_submit.py  eval_utils.py  optimize_utils.py
src/google/agents/cli/info/: cmd_info.py
src/google/agents/cli/infra/: _cicd_utils.py  cmd_cicd.py  cmd_datastore.py  cmd_infra.py  cmd_infra_single_project.py
src/google/agents/cli/publish/: cmd_publish.py  cmd_publish_group.py
src/google/agents/cli/run/: _local_server.py  _multimodal.py  cmd_run.py
src/google/agents/cli/scaffold/: __init__.py  cmd_scaffold_group.py
src/google/agents/cli/scaffold/agents/: README.md
src/google/agents/cli/scaffold/agents/adk/: README.md
src/google/agents/cli/scaffold/agents/adk/.template/: templateconfig.yaml
src/google/agents/cli/scaffold/agents/adk/app/: agent.py
src/google/agents/cli/scaffold/agents/adk_a2a/: README.md
src/google/agents/cli/scaffold/agents/adk_a2a/.template/: templateconfig.yaml
src/google/agents/cli/scaffold/agents/adk_a2a/app/: agent.py
src/google/agents/cli/scaffold/agents/adk_go/.template/: templateconfig.yaml
src/google/agents/cli/scaffold/agents/agentic_rag/: README.md
src/google/agents/cli/scaffold/base_templates/_shared/: agents-cli-manifest.yaml
src/google/agents/cli/scaffold/base_templates/go/: .gitignore  .golangci.yml  Makefile  README.md  main.go
src/google/agents/cli/scaffold/base_templates/java/: .gitignore  Makefile  README.md  pom.xml
src/google/agents/cli/scaffold/base_templates/python/: README.md  pyproject.toml  {{cookiecutter.agent_guidance_filename}}
src/google/agents/cli/scaffold/base_templates/python/.cloudbuild/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
src/google/agents/cli/scaffold/base_templates/python/.github/workflows/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
src/google/agents/cli/scaffold/base_templates/python/{{cookiecutter.agent_directory}}/app_utils/: telemetry.py  typing.py
src/google/agents/cli/scaffold/base_templates/typescript/: Makefile  README.md  package-lock.json  package.json
src/google/agents/cli/scaffold/commands/: create.py  enhance.py  upgrade.py
src/google/agents/cli/scaffold/utils/: backup.py  command.py  datastores.py  gcp.py  generate_locks.py  generation_metadata.py  language.py  lock_utils.py  logging.py  merge.py  remote_template.py  template.py  upgrade.py  version.py
src/google/agents/cli/setup/: _antigravity.py  cmd_auth.py  cmd_setup.py  cmd_update.py
(+101 files in other folders)
