[project]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "your@email.com"},
]
{# A2A on agent_runtime pins aiplatform to 1.149.0 (see [tool.uv] override, #}
{# b/514362507); every other combination needs the ADK 2.x eval fix from #}
{# 1.156.0 (b/519099536). #}
{% set a2a_runtime = cookiecutter.is_a2a and cookiecutter.deployment_target == 'agent_runtime' -%}
{% set aiplatform_floor = "1.149.0" if a2a_runtime else "1.156.0" -%}
dependencies = [
{%- for dep in cookiecutter.extra_dependencies %}
    "{{ dep }}",
{%- endfor %}
    "opentelemetry-instrumentation-google-genai>=0.1.0,<1.0.0",
    "gcsfs>=2024.11.0",
    "google-cloud-logging>=3.12.0,<4.0.0",
{%- if cookiecutter.deployment_target in ('cloud_run', 'gke') %}
    "google-cloud-aiplatform[evaluation]>={{ aiplatform_floor }}",
    "fastapi>=0.115.8,<1.0.0",
    "uvicorn~=0.34.0",
    "asyncpg>=0.30.0,<1.0.0",
    "sqlalchemy>=2,<3",
    "python-multipart>=0.0.20,<1.0.0",
{%- elif cookiecutter.deployment_target == 'agent_runtime' %}
    "google-cloud-aiplatform[evaluation,agent-engines]>={{ aiplatform_floor }}",
    "protobuf>=6.31.1,<7.0.0",
{%- endif %}
]
requires-python = ">=3.11,<3.14"


[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "nest-asyncio>=1.6.0,<2.0.0",
]

[project.optional-dependencies]
eval = [
    "google-adk[eval]>=2.0.0,<3.0.0",
    "google-cloud-aiplatform[evaluation]>={{ aiplatform_floor }}",
]
lint = [
    "ruff>=0.4.6,<1.0.0",
    "ty>=0.0.1a0",
    "codespell>=2.2.0,<3.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "C",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP", # pyupgrade
    "RUF", # ruff specific rules
]
ignore = ["E501", "C901", "B006"] # ignore line too long, too complex

[tool.ruff.lint.isort]
known-first-party = ["{{cookiecutter.agent_directory}}", "frontend"]

[tool.ty]
# ty is Astral's Rust-based type checker (same team as ruff/uv)
# See: https://docs.astral.sh/ty/

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
exclude = [".venv/**"]

[tool.ty.rules]
# Ignore common issues with third-party libraries and dynamic code patterns
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-return-type = "ignore"
possibly-missing-attribute = "ignore"
not-subscriptable = "ignore"
deprecated = "ignore"

[tool.codespell]
ignore-words-list = "rouge"
skip = "./locust_env/*,uv.lock,.venv,./frontend,**/package-lock.json"

{% if a2a_runtime -%}
[tool.uv]
# TODO(b/514362507): remove once google-adk supports a2a-sdk 1.0.
# google-cloud-aiplatform 1.150+ dropped A2A 0.3.x support, breaking
# Vertex Agent Runtime deploys for adk_a2a projects. Pin to 1.149.0
# until ADK ships the a2a-sdk 1.0 compatibility shim (go/orcas-rfc-803).
# Cloud Run / GKE A2A deploys serve via the a2a-sdk HTTP server and never
# hit the agent_engines registration path, so they are not pinned.
# To use eval features added in aiplatform 1.150+, either remove this
# override (accepting the A2A deploy breakage) or bump the pinned
# version, then re-run `agents-cli install`.
override-dependencies = ["google-cloud-aiplatform==1.149.0"]
{%- endif %}


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["{{cookiecutter.agent_directory}}","frontend"]


